# spc-utils

./: Cargo.toml  README.md
src/: cli.rs  main.rs  spc.rs
src/commands/: cache.rs  check_update.rs  download.rs  examples.rs  latest.rs  list.rs  mod.rs
src/spc/: api.rs  cache.rs  category.rs  constants.rs  mod.rs  response.rs
tests/: cli.rs
