[package]
name = "spc-utils"
version = "0.4.0"
edition = "2024"
authors = ["Jonathan Havens <mail@jhavens.tech>"]
description = 'Simple CLI tool for reading and downloading pre-built PHP binaries using the Static PHP CLI (https://github.com/crazywhalecc/static-php-cli) tool'
license = "MIT"
repository = "https://github.com/jhavenz/spc-utils"
homepage = "https://github.com/jhavenz/spc-utils"
readme = "README.md"
keywords = ["php", "static-php", "cli", "static-php-cli", "spc"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "default-tls"] }
semver = { version = "1.0", features = ["serde"] }
strum = { version = "0.26", features = ["derive"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", default-features = false, features = ["std", "clock", "serde"] }
dirs = "5.0"
comfy-table = "7.2"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.14"

